vth-config/tkc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thunder-kubernetes-connector
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thunder-kubernetes-connector
  template:
    metadata:
      labels:
        app: thunder-kubernetes-connector
    spec:
      serviceAccountName: a10-sa-default-ns
      containers:
      - name: thunder-kubernetes-connector
        image: a10networks/a10-kubernetes-connector:2.1.0.0-ubi8
        imagePullPolicy: IfNotPresent
        args:
        - --watch-namespace=$(WATCH_NAMESPACE)
        - --use-node-external-ip=true
        - --patch-to-update=true
        - --safe-acos-delete=true
        - --use-ingress-class-only=true
        - --ingress-class=a10-ext
