vth-config/ws-svc.yaml
apiVersion: v1

kind: Service

metadata:
  name: webserver-svc
  namespace: cyan
spec:
  type: NodePort
  ports:
  - name: http-port
    protocol: TCP
    port: 8080
    targetPort: 80
  selector:
    app: webserver
